                _              __            _   _
       _ __ ___| |_ _ __ ___  / _| ___  _ __| |_| |__
      | '__/ _ \ __| '__/ _ \| |_ / _ \| '__| __| '_ \
      | | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |
      |_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_|

            RetroForth & nga 2024.4 Release Notes

================================================================

- removed duplicate typedef in tools/retro-muri.c (rep by sevan)
- fixed a bug in load_image()                 (C) (rep by sevan)
- err:notfound message no longer in C         (C) (sevan)
- add -v for verbose mode                     (C)
- now skip execuion of NOP instructions       (C)
- fix some casting issues in C                (C)
- force immediate exit() on HA instruction    (C)
- added an implementation of Nga in D         (D)
- removed some unneeded files
- update tools/missing-dsource.retro
- add missing source data for vocabularies & globals:
  a: d: double: err: file: fll: mem: script:
- use strlcpy() in tools/retro-muri.c
- quieter output when building
- remove old Python build + packaging code
- small optimizations in fll: vocabulary
- move from interface/ to package/extensions/:
  double.retro malloc.retro
- fix misc. typos
- in retro-muri.c, use bsd_strlcpy   (rep by fangchar)
- in retro.forth, fix `s:index/char` (rep by fangchar)
- add example/irc-logger.retro
- add example/ilo-export.retro
- file:read-line now provided by file device (C)
- retro-describe now using hash based name comparison
- retro-describe small reductions in call/return overhead
- nga-x11: Retro on X11
- add (termina) vocabulary from ilo [console position, colors]

================================================================